hphp/hack/test/typecheck/expression_trees/pipe_lambda1.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(int $_): ExprTree<Code, Code::TAst, ExampleInt> {
  throw new Exception();
}

function bar(ExprTree<Code, Code::TAst, ExampleInt> $x): ExprTree<Code, Code::TAst, ExampleString> {
  throw new Exception();
}

function helper_baz(ExampleContext $_):
  Awaitable<ExprTree<Code, Code::TAst, (function(ExampleString): ExampleFloat)>>
{
  throw new Exception();
}

function test(): ExprTree<Code, Code::TAst, ExampleInt> {
  // Lambdas don't capture $$, so we should error here
  $et = 1 |> Code`${ (() ==> { return foo($$); })() }`;
  return $et;
}
